docs: restructure how-to-guides for nested sidebar navigation
Convert separator-based organization to proper subdirectory structure:
- build/ - guides for application developers
- extend/ - guides for contributors
- operate/ - guides for operators/SRE

This enables collapsible nested navigation in the Nextra sidebar instead
of flat bold section headers.

--- a/docs/content/how-to-guides/index.mdx
+++ b/docs/content/how-to-guides/index.mdx
@@ -1,44 +1,35 @@
-# How-to guides
+---
+title: How-to Guides
+description: Task-oriented guides for building, extending, and operating Ark
+---
 
-How-to guides help you complete **specific tasks**. Pick the task that matches what you need to do right now.
+# How-to Guides
 
-## Build with ARK (application developers)
+How-to guides help you complete **specific tasks**. Pick the section that matches what you need to do.
 
-- [Create and manage models](/user-guide/models).
-- [Create and manage agents](/user-guide/agents).
-- [Create and manage teams of agents](/user-guide/teams).
-- [Create queries](/user-guide/queries).
-- Add tools and MCP servers:
-  - [Create tools and MCP servers](/user-guide/tools).
-  - [Use the ARK CLI](/user-guide/ark-cli).
-- Use sample patterns you can adapt:
-  - [Explore team samples](/user-guide/samples/teams/team-strategies).
-  - [Explore MCP server samples](/user-guide/samples/mcp-servers).
+## [Build with Ark](/how-to-guides/build)
 
-## Extend ARK (contributors and platform developers)
+For application developers creating agents, teams, and queries.
 
-- Build and run services locally:
-  - [Develop locally](/developer-guide/local-development).
-  - [Understand the build system and Makefile](/developer-guide/build).
-- Implement and expose APIs and services:
-  - [Work with services](/developer-guide/services).
-  - [Use the ARK API](/developer-guide/services/ark-api).
-- [Build A2A servers](/developer-guide/building-a2a-servers).
-- Add workflows, testing, and observability:
-  - [Work with Argo workflows](/developer-guide/workflows/argo-workflows).
-  - [Run end-to-end tests](/developer-guide/testing).
-  - [Monitor with observability tools](/developer-guide/observability).
+- [Configure providers and models](/user-guide/models)
+- [Create an agent](/user-guide/agents)
+- [Coordinate multiple agents](/user-guide/teams)
+- [Run queries](/user-guide/queries)
+- [Add tools and MCP servers](/user-guide/tools)
 
-## Operate ARK (operators, SRE, and security)
+## [Extend Ark](/how-to-guides/extend)
 
-### Platform operations (day-2 and runtime)
-- [Provision cloud infrastructure](/operations-guide/provisioning).
-- [Deploy ARK](/operations-guide/deploying-ark).
+For contributors adding features and services to the platform.
 
-### CI/CD and supply chain
-- [Configure build pipelines](/operations-guide/build-pipelines).
+- [Build and run locally](/developer-guide/local-development)
+- [Implement APIs and services](/developer-guide/services)
+- [Build A2A servers](/developer-guide/building-a2a-servers)
+- [End to end testing](/developer-guide/testing)
 
-### Security and assurance
-- [Review penetration testing reports](/operations-guide/penetration-testing-reports).
-- [Review code analysis reports](/operations-guide/code-analysis-reports).
-- [Review artifact analysis reports](/operations-guide/artifact-analysis-reports).
+## [Operate Ark](/how-to-guides/operate)
+
+For operators and SREs deploying and managing Ark.
+
+- [Cloud infrastructure](/operations-guide/provisioning)
+- [Deploy Ark](/operations-guide/deploying-ark)
+- [Build pipelines](/operations-guide/build-pipelines)
