--- a/docs/content/developer-guide/workflows/argo-workflows.mdx
+++ b/docs/content/developer-guide/workflows/argo-workflows.mdx
@@ -233,3 +233,8 @@ kubectl get workflows
 # View logs
 argo logs @latest
 ```
+
+## Related Documentation
+
+- [Workflow Templates](/user-guide/workflow-templates) - View workflow templates in the dashboard
+- [Resources API](/reference/resources-api) - Access workflow templates via API
