--- a/docs/content/user-guide/dashboard.mdx
+++ b/docs/content/user-guide/dashboard.mdx
@@ -19,7 +19,7 @@ The dashboard will open in your browser:
 
 ![Ark Dashboard](/ark-dashboard-screenshot.png)
 
-The dashboard can be used to create models, agents, teams, tools, run queries, check events and more.
+The dashboard can be used to create models, agents, teams, tools, run queries, check events, view workflow templates, and more.
 
 ---
 
